--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -11,13 +11,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+          cache: 'pip'
       - name: Install packages
         run: |
-          python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
       - name: Lint
         run: |
           pip install pylint pylint-django 
-          python --version
-          pip --version
           pylint shop webshop --ignore 'serializers.py' --ignore-paths 'shop/migrations/'
