--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,6 +14,7 @@ jobs:
           cache: 'pip'
       - name: Install packages
         run: |
+          pip install --upgrade pip
           pip install -r requirements.txt
       - name: Lint
         run: |
