--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ altair==4.2.2
 antlr4-python3-runtime==4.9.3
 appnope==0.1.3
 asgiref==3.7.2
+astroid==3.0.1
 asttokens==2.2.1
 async-generator==1.10
 attrs==22.2.0
@@ -23,6 +24,7 @@ cryptography==41.0.1
 curl-cffi==0.5.5
 cycler==0.11.0
 decorator==5.1.1
+dill==0.3.7
 Django==4.2.6
 django-cors-headers==4.3.0
 django-lint==2.0.4
@@ -50,6 +52,7 @@ idna==3.4
 importlib-metadata==6.6.0
 iniconfig==2.0.0
 ipython==8.11.0
+isort==5.12.0
 jedi==0.18.2
 Jinja2==3.1.2
 jsonschema==4.17.3
@@ -61,6 +64,7 @@ markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+mccabe==0.7.0
 mdurl==0.1.2
 mergedeep==1.3.4
 mkdocs==1.4.2
@@ -85,6 +89,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
+platformdirs==3.11.0
 pluggy==1.0.0
 prompt-toolkit==3.0.38
 protobuf==3.20.3
@@ -98,7 +103,9 @@ pycparser==2.21
 pydeck==0.8.1b0
 pydub==0.25.1
 Pygments==2.14.0
-pylint==0.28.0
+pylint==3.0.2
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
 pymdown-extensions==9.10
 Pympler==1.0.1
 pynvim==0.4.3
@@ -142,13 +149,13 @@ sqlparse==0.4.4
 stack-data==0.6.2
 streamlit==1.21.0
 sympy==1.11.1
-tabulate @ file:///private/tmp/python-tabulate-20231006-5326-1cgwovj/tabulate-0.9.0
 tensorboard==2.12.0
 tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
 thop==0.1.1.post2209072238
 tls-client==0.2
 toml==0.10.2
+tomlkit==0.12.2
 toolz==0.12.0
 torch==2.0.0
 torchvision==0.15.1
