--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,45 @@
+asgiref==3.7.2
+bitarray==2.8.2
+bitstring==4.1.2
+CacheControl==0.13.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.0.4
+colorama==0.4.6
+construct==2.10.69
+contextlib2==21.6.0
+cryptography==39.0.2
 Django==4.2.6
+django-cors-headers==4.3.1
 djangorestframework==3.14.0
+ecdsa==0.18.0
+esp-coredump==1.7.0
+esp-idf-kconfig==1.4.0
+esp-idf-monitor==1.3.3
+esp-idf-panic-decoder==0.2.0
+esptool==4.7.dev3
+filelock==3.13.1
+freertos-gdb==1.0.2
+idf-component-manager==1.4.1
+idna==3.4
+intelhex==2.3.0
+kconfiglib==14.1.0
+msgpack==1.0.7
+packaging==23.2
+pycparser==2.21
+pyelftools==0.29
+pygdbmi==0.9.0.2
+pyparsing==3.0.9
+pyserial==3.5
+pytz==2023.3.post1
+PyYAML==6.0.1
+reedsolo==1.7.0
+requests==2.31.0
+requests-file==1.5.1
+requests-toolbelt==1.0.0
+schema==0.7.5
+six==1.16.0
+sqlparse==0.4.4
+tqdm==4.66.1
+urllib3==1.26.18
